syntax = "proto3";

option go_package = ".;speakingExam";

package speakingExam;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


service RecordingService {
  rpc CreateRecording(CreateRecordingRequest) returns (Recording);
  rpc ListRecordings(google.protobuf.Empty) returns (ListRecordingsResponse);
  rpc downloadRecordings(DownloadRecordingsRequest) returns (stream DownloadRecordingsResponse);
}

message CreateRecordingRequest {
  int64 task_id = 1;
  bytes audio_data = 2;
}

message ListRecordingsResponse {
  repeated Recording recording = 1;
}

message DownloadRecordingsRequest {
  repeated string audio_obj_keys = 1;
}

message DownloadRecordingsResponse {
  bytes audio_data = 1;
}

message Recording {
  int64 id = 1;
  int64 user_id = 2;
  int64 task_id = 3;
  string audio_obj_key = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}